[package]
name = "cl-format-macros"
version = "0.1.3"
edition = "2021"
description = "Proc macro for cl-format"
license = "MIT"
repository = "https://github.com/ccqpein/cl-format-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
