[package]
name = "cl-format"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2021"
description = "Use Common Lisp format in Rust"
license = "MIT"
repository = "https://github.com/ccqpein/cl-format-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"

cl-format-macros = { version = "0.1", path = "../cl-format-macros" }
