[package]
name = "cl-format"
version = "0.1.2"
authors = ["ccQpein"]
edition = "2021"
description = "Use Common Lisp format in Rust"
license = "MIT"
repository = "https://github.com/ccqpein/cl-format-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
cl-format-macros = { version = "0.1", path = "../cl-format-macros" }
